# medtrak_aws

./: .gitignore
.github/workflows/: api.yml  destroy.yaml
services/api/: auth.py  models.py  package.json  pyproject.toml  serverless.yaml  serverless.yml  tests.py
services/api/resources/: cognito.yaml
