[tool.poetry]
name = "medtrak-aws-api"
version = "0.1.0"
description = ""
authors = ["Salim Ingram <salim.ingram@gmail.com>"]
readme = "README.md"
packages = [{include = "medtrak_aws_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.96.1"
uvicorn = "^0.22.0"
httpx = "^0.24.1"
mangum = "^0.17.0"
boto3 = "^1.26.151"


[tool.poetry.group.dev.dependencies]
pytest = "^7.3.2"
pytest-cov = "^4.1.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
bandit = "^1.7.5"
moto = "^4.1.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
